feature/command object
